Updated the h3 styles on dark background

--- a/b5_ac_conect/css/style.css
+++ b/b5_ac_conect/css/style.css
@@ -11410,6 +11410,10 @@ body {
 .bg-dark {
   background-color: #1A5B6E;
 }
+.bg-dark h3, .bg-dark .h3 {
+  color: #48C0B9;
+}
+
 .bg-medium {
   background-color: #138597;
 }
