--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -43,6 +43,10 @@ body {
             @extend .text-orange;
         }
     }
+
+    h3, .h3 {
+        color: $access-teal;
+    }
 }
 
 .bg-medium {
