Adding classes for header menu icons

--- a/b5_ac_conect/css/style.css
+++ b/b5_ac_conect/css/style.css
@@ -11440,13 +11440,11 @@ body {
     */
 .region-nav-access-main {
   flex-direction: row;
-  height: 48px;
   text-align: left;
 }
 
 .region-nav-access-additional {
   flex-direction: row;
-  height: 48px;
   text-align: right;
 }
 
@@ -11500,6 +11498,35 @@ footer a:hover {
   border-color: #000;
 }
 
+.region-nav-access-main .nav-menu-icon-no-text,
+.region-nav-access-additional .nav-menu-icon-no-text {
+  visibility: hidden;
+}
+.region-nav-access-main .nav-menu-icon::after,
+.region-nav-access-additional .nav-menu-icon::after {
+  visibility: visible;
+  display: inline-block;
+  height: 13px;
+  width: 16px;
+  overflow: visible;
+  content: " ";
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  margin-left: 5px;
+}
+.region-nav-access-main .nav-menu-icon-home::after,
+.region-nav-access-additional .nav-menu-icon-home::after {
+  background-image: url(../assets/img/icons/house-solid.svg);
+}
+.region-nav-access-main .nav-menu-icon-search::after,
+.region-nav-access-additional .nav-menu-icon-search::after {
+  background-image: url(../assets/img/icons/magnifying-glass-solid.svg);
+}
+.region-nav-access-main .nav-menu-icon-hamburger::after,
+.region-nav-access-additional .nav-menu-icon-hamburger::after {
+  background-image: url(../assets/img/icons/bars-solid.svg);
+}
 .region-nav-access-main ul li a,
 .region-nav-access-additional ul li a {
   padding: 16px 8px;
