--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -201,7 +201,7 @@ footer {
                 &.sf-depth-1 {
                     color: $access-light;
                     background-color: $access-dark;
-                    font-weight: 700;
+                    font-weight: 800;
                     font-size: 14px;
                     padding: 16px 8px;
 
@@ -215,7 +215,11 @@ footer {
                     background-color: $access-medium;
                     font-weight: 600;
                     font-size: 14px;
-                    padding: 6px 5px;
+                    line-height: 16px;
+                    padding-top: 8px;
+                    padding-bottom: 8px;
+                    padding-left: 20px;
+                    padding-right: 20px;
                 }
 
                 text-decoration: none;
@@ -281,15 +285,22 @@ footer {
                     background-color: white;
                     font-weight: 600;
                     font-size: 16px;
-                    padding: 16px 24px;
+                    padding-top: 15px;
+                    padding-bottom: 14px;
+                    padding-left: 20px;
+                    padding-right: 20px;
                 }
 
                 &.sf-depth-2 {
                     color: $access-light;
                     background-color: $access-medium;
                     font-weight: 600;
-                    font-size: 14px;
-                    padding: 6px 5px;
+                    font-size: 16px;
+                    line-height: 18px;
+                    padding-top: 9px;
+                    padding-bottom: 9px;
+                    padding-left: 20px;
+                    padding-right: 20px;
                 }
 
                 &:hover {
@@ -316,9 +327,20 @@ footer {
     }
 }
 
+ul.sf-menu.sf-horizontal.sf-shadow ul,
+ul.sf-menu.sf-vertical.sf-shadow ul,
+ul.sf-menu.sf-navbar.sf-shadow ul ul {
+    box-shadow: none;
+}
+
 .navbar-brand .site-logo {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    img {
+        height: 85.87px;
+        width: 380px;
+    }
 }
 
 h1, .h1 {
@@ -418,7 +440,8 @@ h4, .h4 {
             a {
                 color: $access-dark;
                 text-decoration: none;
-                font-weight: 700;
+                font-weight: 400;
+                font-size: 14px;
 
                 &:hover {
                     color: $access-medium;
