--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -110,17 +110,45 @@ footer .social-link svg:hover {
 
 footer {
 
-    .footer-policies a, .read-more, footer-rights {
-        font-size: 14px;
+    p {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 24px;
+
+        a.btn.btn-link {
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: 800;
+            line-height: 24px;
+
+        }
+
+        small {
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 18px;
+        }
     }
 
-    a {
+    a.btn.btn-link {
         color: $access-medium;
         text-decoration: none;
 
         &:hover {
             text-decoration: underline;
         }
+    }
+
+    .footer-policies a.btn.btn-link{
+        font-size: 12px;
+        font-weight: 600;
+    }
+
+    a.btn.btn-link.read-more {
+        color: $access-medium;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 18px;
     }
 }
 
