--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -125,64 +125,64 @@
     <footer class="mt-auto {{ footer_classes }}" data-elastic-exclude="true">
         <div class="{{ b5_top_container }}">
             <div class="row pt-4">
-                <div class="col-md-2 col-sm-2 p-2 text-center">
-                    <a href="https://www.nsf.gov/" id="nsf-logo" target="_blank">
-                        <img style="max-width: 89px" alt="National Science Foundation" class="w-100"
-                             src="/themes/contrib/b5_ac_conect/logos/NSF_4-Color_bitmap_Logo-150x150.png"></a>
-                </div>
-                <div class="col-md-6 col-sm-8">
-                    <p>ACCESS is an advanced computing and data resource supported by the <strong><a
-                                    href="https://www.nsf.gov/" target="_blank">National Science Foundation</a></strong>
-                        and made possible through these lead institutions and their partners — <strong><a
-                                    href="https://www.cmu.edu/" target="_blank">Carnegie Mellon University</a></strong>,
-                        <strong><a href="https://www.colorado.edu/" target="_blank">University of Colorado
-                                Boulder</a></strong>, <strong><a href="https://illinois.edu/" target="_blank">University
-                                of Illinois at Urbana-Champaign</a></strong>, and <strong><a
-                                    href="https://www.buffalo.edu/" target="_blank">State University of New York at
-                                Buffalo</a></strong>.</p>
+                <div class="col-md-6 col-sm-12">
+                    <p>
+                        ACCESS is an advanced computing and data resource program supported by the U.S. National
+                        Science Foundation (NSF) under the Office of Advanced Cyberinfrastructure awards
+                        <a class="btn btn-link"
+                            href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2138259&HistoricalAwards=false">
+                            #2138259</a>,
+                        <a class="btn btn-link"
+                            href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2138286&HistoricalAwards=false">
+                            #2138286</a>,
+                        <a class="btn btn-link"
+                            href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2138307&HistoricalAwards=false">
+                            #2138307</a>,
+                        <a class="btn btn-link"
+                            href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2137603&HistoricalAwards=false">
+                            #2137603</a> and
+                        <a class="btn btn-link"
+                            href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2138296&HistoricalAwards=false">
+                            #2138296</a>.
+                    </p>
 
-                    <a class="mt-3 read-more" href="https://access-ci.org/contact">
+                    <p>
+                        <small>
+                            Any opinions, findings, conclusions or recommendations expressed in this material are those of the authors and do not necessarily reflect the views of NSF.
+                        </small>
+                    </p>
+
+                    <a class="mt-3 read-more btn btn-link" href="https://access-ci.org/contact">
                         CONTACT ACCESS
                     </a>
                 </div>
 
-                <div class="col-md-4 col-sm-2 text-center">
+                <div class="col-md-6 col-sm-12 text-center pt-5">
                     <a class="social-link" href="https://twitter.com/ACCESSforCI">
-                        <svg aria-hidden="true" focusable="false" height="24" version="1.1" viewBox="0 0 24 24"
-                             width="24" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M22.23,5.924c-0.736,0.326-1.527,0.547-2.357,0.646c0.847-0.508,1.498-1.312,1.804-2.27 c-0.793,0.47-1.671,0.812-2.606,0.996C18.324,4.498,17.257,4,16.077,4c-2.266,0-4.103,1.837-4.103,4.103 c0,0.322,0.036,0.635,0.106,0.935C8.67,8.867,5.647,7.234,3.623,4.751C3.27,5.357,3.067,6.062,3.067,6.814 c0,1.424,0.724,2.679,1.825,3.415c-0.673-0.021-1.305-0.206-1.859-0.513c0,0.017,0,0.034,0,0.052c0,1.988,1.414,3.647,3.292,4.023 c-0.344,0.094-0.707,0.144-1.081,0.144c-0.264,0-0.521-0.026-0.772-0.074c0.522,1.63,2.038,2.816,3.833,2.85 c-1.404,1.1-3.174,1.756-5.096,1.756c-0.331,0-0.658-0.019-0.979-0.057c1.816,1.164,3.973,1.843,6.29,1.843 c7.547,0,11.675-6.252,11.675-11.675c0-0.178-0.004-0.355-0.012-0.531C20.985,7.47,21.68,6.747,22.23,5.924z"></path>
-                        </svg>
+                        <svg width="24" height="24" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M13.982 10.622 20.54 3h-1.554l-5.693 6.618L8.745 3H3.5l6.876 10.007L3.5 21h1.554l6.012-6.989L15.868 21h5.245l-7.131-10.378Zm-2.128 2.474-.697-.997-5.543-7.93H8l4.474 6.4.697.996 5.815 8.318h-2.387l-4.745-6.787Z"></path></svg>
                     </a>
                     <a class="social-link" href="https://www.youtube.com/c/ACCESSforCI">
-                        <svg aria-hidden="true" focusable="false" height="24" version="1.1" viewBox="0 0 24 24"
-                             width="24" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M21.8,8.001c0,0-0.195-1.378-0.795-1.985c-0.76-0.797-1.613-0.801-2.004-0.847c-2.799-0.202-6.997-0.202-6.997-0.202 h-0.009c0,0-4.198,0-6.997,0.202C4.608,5.216,3.756,5.22,2.995,6.016C2.395,6.623,2.2,8.001,2.2,8.001S2,9.62,2,11.238v1.517 c0,1.618,0.2,3.237,0.2,3.237s0.195,1.378,0.795,1.985c0.761,0.797,1.76,0.771,2.205,0.855c1.6,0.153,6.8,0.201,6.8,0.201 s4.203-0.006,7.001-0.209c0.391-0.047,1.243-0.051,2.004-0.847c0.6-0.607,0.795-1.985,0.795-1.985s0.2-1.618,0.2-3.237v-1.517 C22,9.62,21.8,8.001,21.8,8.001z M9.935,14.594l-0.001-5.62l5.404,2.82L9.935,14.594z"></path>
-                        </svg>
+                        <svg width="24" height="24" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M21.8,8.001c0,0-0.195-1.378-0.795-1.985c-0.76-0.797-1.613-0.801-2.004-0.847c-2.799-0.202-6.997-0.202-6.997-0.202 h-0.009c0,0-4.198,0-6.997,0.202C4.608,5.216,3.756,5.22,2.995,6.016C2.395,6.623,2.2,8.001,2.2,8.001S2,9.62,2,11.238v1.517 c0,1.618,0.2,3.237,0.2,3.237s0.195,1.378,0.795,1.985c0.761,0.797,1.76,0.771,2.205,0.855c1.6,0.153,6.8,0.201,6.8,0.201 s4.203-0.006,7.001-0.209c0.391-0.047,1.243-0.051,2.004-0.847c0.6-0.607,0.795-1.985,0.795-1.985s0.2-1.618,0.2-3.237v-1.517 C22,9.62,21.8,8.001,21.8,8.001z M9.935,14.594l-0.001-5.62l5.404,2.82L9.935,14.594z"></path></svg>
                     </a>
                     <a class="social-link" href="https://www.facebook.com/ACCESSforCI">
-                        <svg aria-hidden="true" focusable="false" height="24" version="1.1" viewBox="0 0 24 24"
-                             width="24" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12 2C6.5 2 2 6.5 2 12c0 5 3.7 9.1 8.4 9.9v-7H7.9V12h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.5h-1.3c-1.2 0-1.6.8-1.6 1.6V12h2.8l-.4 2.9h-2.3v7C18.3 21.1 22 17 22 12c0-5.5-4.5-10-10-10z"></path>
-                        </svg>
+                        <svg width="24" height="24" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M12 2C6.5 2 2 6.5 2 12c0 5 3.7 9.1 8.4 9.9v-7H7.9V12h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.5h-1.3c-1.2 0-1.6.8-1.6 1.6V12h2.8l-.4 2.9h-2.3v7C18.3 21.1 22 17 22 12c0-5.5-4.5-10-10-10z"></path></svg>
                     </a>
                     <a class="social-link" href="https://www.linkedin.com/company/accessforci/">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                        <svg width="24" height="24" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M19.7,3H4.3C3.582,3,3,3.582,3,4.3v15.4C3,20.418,3.582,21,4.3,21h15.4c0.718,0,1.3-0.582,1.3-1.3V4.3 C21,3.582,20.418,3,19.7,3z M8.339,18.338H5.667v-8.59h2.672V18.338z M7.004,8.574c-0.857,0-1.549-0.694-1.549-1.548 c0-0.855,0.691-1.548,1.549-1.548c0.854,0,1.547,0.694,1.547,1.548C8.551,7.881,7.858,8.574,7.004,8.574z M18.339,18.338h-2.669 v-4.177c0-0.996-0.017-2.278-1.387-2.278c-1.389,0-1.601,1.086-1.601,2.206v4.249h-2.667v-8.59h2.559v1.174h0.037 c0.356-0.675,1.227-1.387,2.526-1.387c2.703,0,3.203,1.779,3.203,4.092V18.338z"></path></svg>
                     </a>
                 </div>
             </div>
             <div class="row mb-4 pt-2 mt-5 border-top border-secondary">
-                <div class="col-md-3 text-md-start" id="footer-brand">
-                    <a href="https://access-ci.org"><img alt="ACCESS" class="footer-logo" height="30"
-                                                         src="/themes/contrib/b5_ac_conect/logos/access-logo-footer.svg"></a>
+                <div class="col-md-6 col-sm-end text-md-start" id="footer-brand">
+                    <a href="https://access-ci.org"><img alt="ACCESS" class="footer-logo" height="43px" width="188.1px"
+                                                         src="/themes/contrib/b5_ac_conect/logos/ACCS012524_ACCESS_Logo-Main-RGB.png"></a>
                 </div>
 
-                <div class="col-md-6 footer-policies text-end">
-                    <a class="p-2" href="https://identity.access-ci.org/aup.html">Acceptable Use</a>
-                    <a class="p-2" href="https://access-ci.org/code-of-conduct">Code of Conduct</a>
-                    <a class="p-2" href="https://access-ci.org/privacy-policy">Privacy Policy</a>
+                <div class="col-md-6 col-sm-12 footer-policies text-md-end text-sm-start">
+                    <a class="p-2 btn btn-link" href="https://identity.access-ci.org/aup.html">Acceptable Use Policy</a>
+                    <a class="p-2 btn btn-link" href="https://access-ci.org/code-of-conduct">Code of Conduct</a>
+                    <a class="p-2 btn btn-link" href="https://access-ci.org/privacy-policy">Privacy Policy</a>
                 </div>
-
-                <div class="col-md-3 text-start footer-rights">All rights reserved. ©2022 ACCESS</div>
             </div>
             {#{{ page.footer }}#}
         </div>
