--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -68,8 +68,16 @@
 
     {% if page.nav_branding or page.nav_main %}
         <nav class="{{ nav_classes }}">
-            <div class="{{ b5_top_container }} d-flex   w-100 py-0 py-md-0">
-                {{ page.nav_branding }}
+            <div class="{{ b5_top_container }} d-flex w-100 branding-wrapper">
+                <div class="d-flex">
+                    <a class="nsf-logo" href="https://www.nsf.gov/" target="_blank">
+                        <img src="themes/contrib/b5_ac_conect/logos/NSF_logo.svg" />
+                    </a>
+                    <div class="logo-divider">
+                        <img src="themes/contrib/b5_ac_conect/logos/ACCESS-pipe.svg" />
+                    </div>
+                    {{ page.nav_branding }}
+                </div>
                 {{ page.nav_main }}
             </div>
         </nav>
