--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -125,7 +125,7 @@ footer {
             font-size: 18px;
             font-weight: 800;
             line-height: 24px;
-
+            user-select: auto;
         }
 
         small {
