Adding the `Glossary` and `Site Map` links to the footer
# Conflicts:
#	CHANGELOG

--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -190,6 +190,8 @@
                     <a class="p-2 btn btn-link" href="https://identity.access-ci.org/aup.html">Acceptable Use Policy</a>
                     <a class="p-2 btn btn-link" href="https://access-ci.org/code-of-conduct">Code of Conduct</a>
                     <a class="p-2 btn btn-link" href="https://access-ci.org/privacy-policy">Privacy Policy</a>
+                    <a class="p-2 btn btn-link" href="https://access-ci.org/glossary/">Glossary</a>
+                    <a class="p-2 btn btn-link" href="https://access-ci.org/site-map/">Site Map</a>
                 </div>
             </div>
             {#{{ page.footer }}#}
