--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="col-md-6 col-sm-12 footer-policies text-md-end text-sm-start">
-                    <a class="p-2 btn btn-link" href="https://identity.access-ci.org/aup.html">Acceptable Use Policy</a>
+                    <a class="p-2 btn btn-link" href="https://access-ci.org/acceptable-use">Acceptable Use Policy</a>
                     <a class="p-2 btn btn-link" href="https://access-ci.org/code-of-conduct">Code of Conduct</a>
                     <a class="p-2 btn btn-link" href="https://access-ci.org/privacy-policy">Privacy Policy</a>
                     <a class="p-2 btn btn-link" href="https://access-ci.org/glossary/">Glossary</a>
